--- a/level3.html
+++ b/level3.html
@@ -22,7 +22,7 @@
       border-radius: 20px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
       padding: 30px;
-      width: 90%;
+      width: 40%;
       max-width: 1000px;
       margin: 40px auto;
       color: white;
@@ -105,3 +105,238 @@
 
   <div class="overlay">
     <h1>Level 3 Past Papers</h1>
+
+
+  <!-- Peo Subject -->
+  <h2 onclick="toggleSection(this)">
+    Pure Maths
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      PEU3300
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      PEU3301
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+     <div class="course" onclick="toggleSectionCourse(event, this)">
+      PEU3202
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+
+    <!-- Applied Subject -->
+  <h2 onclick="toggleSection(this)">
+    Applied Maths
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      ADU3300
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      ADU3201
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+     <div class="course" onclick="toggleSectionCourse(event, this)">
+      ADU3302
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Computer Science Subject -->
+  <h2 onclick="toggleSection(this)">
+    Computer Science
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      CSU3200
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      CSU3301
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+  <!--Chemistry Subject -->
+  <h2 onclick="toggleSection(this)">
+    Chemistry
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      CYU3300
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      CYU3201
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+     <div class="course" onclick="toggleSectionCourse(event, this)">
+      CYU3302
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Physics Subject -->
+  <h2 onclick="toggleSection(this)">
+    Physics
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      PHU3300
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-PHU3300-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-PHU3300-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      PHU3301
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-PHU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-PHU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+
+   <!-- Zoology Subject -->
+  <h2 onclick="toggleSection(this)">
+    Zoology
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      ZYU3500
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      ZYU3301
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+ <!-- Botany Subject -->
+  <h2 onclick="toggleSection(this)">
+    Botany
+    <span class="arrow">&#9660;</span>
+  </h2>
+  <div class="courses">
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      BYU3500
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/1NAkPuZizTiVhWfbeMAm2-lvEobV6qxbW" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/1Hyyh_YJ_2pVsQXxi-KEUuc6ybi_nuXYg" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+
+    <div class="course" onclick="toggleSectionCourse(event, this)">
+      BYU3301
+      <span class="arrow">&#9660;</span>
+      <div class="paper-links">
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-CAT" target="_blank" rel="noopener noreferrer">CAT Papers</a>
+        <a href="https://drive.google.com/drive/folders/YOUR-CSU3301-FINAL" target="_blank" rel="noopener noreferrer">Final Papers</a>
+      </div>
+    </div>
+  </div>
+
+
+
+<script>
+  function toggleSection(el) {
+    el.classList.toggle('expanded');
+    const next = el.nextElementSibling;
+    if (next.style.display === 'block') {
+      next.style.display = 'none';
+    } else {
+      next.style.display = 'block';
+    }
+  }
+
+  function toggleSectionCourse(event, el) {
+    event.stopPropagation(); // Prevent toggling parent section
+
+    el.classList.toggle('expanded');
+    const papers = el.querySelector('.paper-links');
+    if (papers.style.display === 'block') {
+      papers.style.display = 'none';
+    } else {
+      papers.style.display = 'block';
+    }
+  }
+</script>
+
+</body>
+</html>
