--- a/level3.html
+++ b/level3.html
@@ -94,11 +94,17 @@
       color: #ffecb3;
       text-decoration: none;
       margin-bottom: 5px;
+      padding: 5px 10px;
+      border-radius: 5px;
+      background-color: rgba(0, 0, 0, 0.4); /* Add this for better visibility */
     }
 
+
     .paper-links a:hover {
+      background-color: rgba(255, 255, 255, 0.2);
       text-decoration: underline;
     }
+
   </style>
 </head>
 <body>
