--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BSC SCIENCE OUSL PAST PAPERS</title>
+  <title>Open University </title>
+  <title>BSC Science Degree</title>
+  <title>Past Papers</title>
   <style>
     body {
       font-family: Arial, sans-serif;
