--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Open University </title>
-  <title>BSC Science Degree</title>
-  <title>Past Papers</title>
+  <title>OUSL BSc Science - Past Papers</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -26,7 +24,13 @@
     img {
       max-width: 300px;
       height: auto;
-      margin: 10px;
+      margin: 10px auto;
+      display: block;
+    }
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     section {
       background: white;
@@ -50,12 +54,14 @@
 </head>
 <body>
 
-  <h1>BSC SCIENCE OUSL PAST PAPERS</h1>
-  <img src="https://reginfo.ou.ac.lk/img/main.jpg" alt="OUSL Logo" />
-
-  <section>
-    <a href="level3.html">Go to LEVEL 3 Past Papers →</a>
-  </section>
+  <main>
+    <h1>BSc Science - OUSL Past Papers</h1>
+    <img src="https://reginfo.ou.ac.lk/img/main.jpg" alt="Open University of Sri Lanka Logo" />
+    
+    <section>
+      <a href="level3.html">Go to LEVEL 3 Past Papers →</a>
+    </section>
+  </main>
 
 </body>
 </html>
