--- a/index.html
+++ b/index.html
@@ -76,16 +76,21 @@
     <!-- Add more sections later -->
   </main>
 
-  <script>
-    const searchBox = document.getElementById('searchBox');
-    searchBox.addEventListener('input', function () {
-      const query = searchBox.value.toLowerCase();
-      document.querySelectorAll('.link-section').forEach(section => {
-        const text = section.textContent.toLowerCase();
-        section.style.display = text.includes(query) ? 'block' : 'none';
-      });
+   <script>
+   const searchBox = document.getElementById('searchBox');
+
+  searchBox.addEventListener('input', function () {
+    const query = searchBox.value.toLowerCase();
+
+    document.querySelectorAll('.link-section').forEach(section => {
+      const link = section.querySelector('a'); // get the <a> tag inside
+      const text = link.textContent.toLowerCase();
+
+      section.style.display = text.includes(query) ? 'block' : 'none';
     });
+   });
   </script>
+
 
 </body>
 </html>
